@@ -27,7 +27,7 @@ ifneq ($(UNAME), MINGW32_NT-6.1)
 endif
 
 DXTOOLKIT_GITVERSION := $(shell git describe)
-VERSION = 1.2.6
+VERSION = 1.2.7
 
 sw_dir = $(HOME)/sw/local
 curl_dir = $(sw_dir)/curl
@@ -41,8 +41,8 @@ lmagic_dir = $(sw_dir)/file-5.03-lib
 boost_dir = $(sw_dir)/boost_1_51_0
 VPATH = $(dxjson_dir):$(dxhttp_dir):$(dxcpp_dir):$(ua_dir)
 
-CFLAGS = -g -Wall -pedantic -Wextra -I/include -I$(zlib_dir)/include -I$(lmagic_dir)/include
-CXXFLAGS = -DWINDOWS_BUILD=1 -DBOOST_THREAD_USE_LIB -D_FILE_OFFSET_BITS=64 -DUAVERSION=\"$(VERSION)\" -DDXTOOLKIT_GITVERSION=\"$(DXTOOLKIT_GITVERSION)\" -g -Wall -pedantic -Wextra -Werror=return-type -Wno-switch -std=c++0x -I$(curl_dir)/include -I$(cpp_dir) -I$(dxhttp_dir) -I$(dxjson_dir) -I$(dxcpp_dir) -I$(ua_dir) -I$(boost_dir) -I$(zlib_dir)/include -I$(lmagic_dir)/include -I/include
+CFLAGS = -O3 -Wall -pedantic -Wextra -I/include -I$(zlib_dir)/include -I$(lmagic_dir)/include
+CXXFLAGS = -DWINDOWS_BUILD=1 -DBOOST_THREAD_USE_LIB -D_FILE_OFFSET_BITS=64 -DUAVERSION=\"$(VERSION)\" -DDXTOOLKIT_GITVERSION=\"$(DXTOOLKIT_GITVERSION)\" -O3 -Wall -pedantic -Wextra -Werror=return-type -Wno-switch -std=c++0x -I$(curl_dir)/include -I$(cpp_dir) -I$(dxhttp_dir) -I$(dxjson_dir) -I$(dxcpp_dir) -I$(ua_dir) -I$(boost_dir) -I$(zlib_dir)/include -I$(lmagic_dir)/include -I/include
 
 LDFLAGS := -static-libstdc++ -static-libgcc -DBOOST_THREAD_USE_LIB -L$(boost_dir)/stage/lib -L$(curl_dir)/lib -L/lib -L$(lmagic_dir)/lib $(LDFLAGS) -L$(zlib_dir)/lib -lboost_program_options-mgw47-mt-1_51 -lboost_filesystem-mgw47-mt-1_51 -lboost_regex-mgw47-mt-1_51 -lboost_system-mgw47-mt-1_51 -lcurl -lcrypto -lmagic -lz -lboost_thread-mgw47-mt-1_51 -lboost_chrono-mgw47-mt-1_51
 
